syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.iohk.atala.prism.protos";

package io.iohk.atala.prism.protos;

import "common_models.proto";
import "node_models.proto";

import "google/protobuf/timestamp.proto";

/**
 * Service for PRISM Node API. Provides a way to store, retrieve and update
 * Decentralized identifiers (DIDs) into/from the underlying blockchain.
 */
service NodeService {
    /**
     * PUBLIC
     *
     * Sends a request that can be used to check service health.
     * All PRISM services expose an RPC that accepts this message as request.
     */
    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {}

    /**
    * PUBLIC
    *
    * Retrieves a DID Document associated to a DID.
    *
    * Errors:
    * - Invalid long form DID (INVALID_ARGUMENT)
    * - DID format not supported (INVALID_ARGUMENT)
    * - Invalid DID (INVALID_ARGUMENT)
    * - Unknown DID (INVALID_ARGUMENT)
    */
    rpc GetDidDocument(GetDidDocumentRequest) returns (GetDidDocumentResponse) {}

    /**
    * PUBLIC
    *
    * Retrieves the Node version info.
    */
    rpc GetNodeBuildInfo(GetNodeBuildInfoRequest) returns (GetNodeBuildInfoResponse) {}

    /**
    * PUBLIC
    *
    * Retrieves the Node version info.
    */
    rpc GetNodeNetworkProtocolInfo(GetNodeNetworkProtocolInfoRequest) returns (GetNodeNetworkProtocolInfoResponse) {}

    /**
     * PUBLIC
     *
     * Retrieves the status of an operation.
     */
    rpc GetOperationInfo(GetOperationInfoRequest) returns (GetOperationInfoResponse) {}

    /**
     * PUBLIC
     *
     * Timestamp of the latest block processed by PRISM Node.
     */
    rpc GetLastSyncedBlockTimestamp(GetLastSyncedBlockTimestampRequest) returns (GetLastSyncedBlockTimestampResponse) {}

    /**
     * PUBLIC
     *
     * Schedules a list of operations for further publication.
     */
    rpc ScheduleOperations(ScheduleOperationsRequest) returns (ScheduleOperationsResponse) {}
}

/**
 * Request to find a DID Document.
 * See NodeService.GetDidDocument for more information.
 */
message GetDidDocumentRequest {
    string did = 1; // The DID.
}
/**
 * Response to a DID Document query.
 * See NodeService.GetDidDocument for more information.
 */
message GetDidDocumentResponse {
    DIDData document = 1; // The DID Document.
    google.protobuf.Timestamp last_synced_block_timestamp = 5; // Timestamp of the latest synchronized block.
    bytes last_update_operation = 6; // The hash of the last did update operation.
}

/**
 * Request to get the Node version info.
 * See NodeService.GetNodeBuildInfo for more information.
 */
message GetNodeBuildInfoRequest {
}
/**
 * Response with the Node version info.
 * See NodeService.GetNodeBuildInfo for more information.
 */
message GetNodeBuildInfoResponse {
    reserved 4;

    string version = 1; // The actual version.
    string scala_version = 2; // The Scala version used to compile the app.
    string sbt_version = 3; // The SBT version used to compile the app.
}

/**
 * Request to get the Node version info.
 * See NodeService.GetNodeBuildInfo for more information.
 */
message GetNodeNetworkProtocolInfoRequest {
}
/**
 * Response with the Node Protocol version info.
 * See NodeService.GetNodeProtocolVersionInfo for more information.
 */
message GetNodeNetworkProtocolInfoResponse {
    ProtocolVersion supported_network_protocol_version = 5; // Network protocol version number supported by Node.
    ProtocolVersion current_network_protocol_version = 6; // Current network protocol version number.
}

/**
 * Request to get the operation status.
 * See NodeService.GetOperationInfo for more information.
 */
message GetOperationInfoRequest {
    bytes operation_id = 1; // Operation identifier. The identifier is returned to the corresponding operation request.
}
/**
 * Response with the current operation status.
 *  See NodeService.GetOperationInfo for more information.
 */
message GetOperationInfoResponse {
    OperationStatus operation_status = 1; // Contains the status of this operation.
    string transaction_id = 3; // Transaction identifier containing the operation. Presented only when operation was approved by the ledger.
    google.protobuf.Timestamp last_synced_block_timestamp = 2; // Timestamp of the latest synchronized block.
    string details = 4; // Contains additional information about the operation state. For example, error descriptions. Can be empty.
}

/**
 * Request to retrieve the timestamp of the latest synchronized (processed by PRISM Node) block.
 * See NodeService.GetLastSyncedBlockTimestampRequest for more information.
 */
message GetLastSyncedBlockTimestampRequest {
}
/**
 * Response with the timestamp of the latest synchronized (processed by PRISM Node) block.
 * See NodeService.GetLastSyncedBlockTimestampResponse for more information.
 */
message GetLastSyncedBlockTimestampResponse {
    /**
     * Timestamp of the latest synchronized (processed by PRISM Node) block.
     */
    google.protobuf.Timestamp last_synced_block_timestamp = 1;
}

/**
 * Request to retrieve transaction info and operations outputs.
 */
message ScheduleOperationsRequest {
    /**
    * List of signed operations to apply. The operations will be applied in the order specified here.
    */
    repeated SignedAtalaOperation signed_operations = 1; // a list of signed operations
}

/**
 * Response with the transaction info and operations outputs.
 */
message ScheduleOperationsResponse {
    /**
     * The responses for scheduled operations, ordered the same as the operations sent in ScheduleOperationsRequest.
     */
    repeated OperationOutput outputs = 1;
}

// Used to encode the responses of the operations issued in an AtalaBlock.
message OperationOutput {
    oneof result {
        // Represents the response provided by IssueCredentialBatchOperation.
        CreateDIDOutput create_did_output = 2;
        // Represents the response provided by UpdateDIDOperation.
        UpdateDIDOutput update_did_output = 3;
        // Represents the response provided by ProtocolVersionUpdateOperation.
        ProtocolVersionUpdateOutput protocol_version_update_output = 7;
        DeactivateDIDOutput deactivate_did_output = 8;
    }
    oneof operation_maybe {
        bytes operation_id = 5; // Operation identifier.
        string error = 6; // Error description if PRISM Node service haven't scheduled the operation.
    }
}

message CreateDIDOutput {
    string did_suffix = 1;
}
message UpdateDIDOutput {}
message ProtocolVersionUpdateOutput {}
message DeactivateDIDOutput {}
